--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Kanit:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply h-full;
+  }
+  #root {
+    @apply flex min-h-screen flex-col;
+  }
+  main {
+    @apply flex-grow;
+  }
+}
