--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
   body {
-    @apply h-full;
+    @apply h-full bg-main-color;
   }
   #root {
     @apply flex min-h-screen flex-col;
